[Ayush] Add: Python program to create a null vector of size 10 and update sixth value to 11.

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,6 +98,46 @@
       "[[ 2  3  4]\n",
       " [ 5  6  7]\n",
       " [ 8  9 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q3\n",
+    "Python program to create a null vector of size 10 and update sixth value to 11."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    arr = np.array([0 for _ in range(10)], dtype = 'float')\n",
+    "    print(f\"The orignal array is {arr}\")\n",
+    "    arr[5] = 11\n",
+    "    print(f\"The updated array is {arr}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The orignal array is [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "The updated array is [ 0.  0.  0.  0.  0. 11.  0.  0.  0.  0.]\n"
      ]
     }
    ],
