[Ayush] Add: Python program to reverse an array

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -145,6 +145,81 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q4\n",
+    "Python program to reverse an array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse_array(arr):\n",
+    "    \"\"\"\n",
+    "    Description:\n",
+    "        This function reverses the array\n",
+    "    Parameters:\n",
+    "        arr: Num array\n",
+    "    Return:\n",
+    "        arr: Rreversed Array\n",
+    "    \"\"\"\n",
+    "    start = 0\n",
+    "    temp = 0\n",
+    "    end = len(arr) - 1\n",
+    "    while start < end:\n",
+    "        temp = arr[start]\n",
+    "        arr[start] = arr[end]\n",
+    "        arr[end] = temp\n",
+    "\n",
+    "        start += 1\n",
+    "        end -= 1\n",
+    "\n",
+    "    return arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    n = int(input(\"Enter number of elements in the array: \"))\n",
+    "    num_list = []\n",
+    "    for index in range(n):\n",
+    "        num_list.append(int(input(f\"Enter {index+1} element: \")))\n",
+    "        \n",
+    "    arr = np.array(num_list)\n",
+    "    print(f\"\\nThe orignal array is {arr}\")\n",
+    "    print(f\"\\nThe reversed array is {reverse_array(arr)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The orignal array is [1 2 3 4 5]\n",
+      "\n",
+      "The reversed array is [5 4 3 2 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
