[Ayush] Add: Python program to create a 2d array with 1 on the border and 0 inside.

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -220,6 +220,81 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q5\n",
+    "Python program to create a 2d array with 1 on the border and 0 inside."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_pattern(arr):\n",
+    "    \"\"\"\n",
+    "    Description: \n",
+    "        This function creates an array with 1 on the border and 0 inside. \n",
+    "    Parameters:\n",
+    "        arr: orignal array\n",
+    "    Return:\n",
+    "        arr\n",
+    "    \"\"\"\n",
+    "    for row in range(len(arr)):\n",
+    "        for column in range(len(arr[0])):\n",
+    "            if row == 0 or column == 0 or row == (len(arr) - 1) or column == (len(arr[0]) - 1):\n",
+    "                pass\n",
+    "            else:\n",
+    "                arr[row, column] = 0\n",
+    "    return arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    arr = np.array([1 for _ in range(25)])\n",
+    "    arr = arr.reshape(5,5)\n",
+    "    print(f\"The orignal array is \\n{arr}\")\n",
+    "    print(f\"\\nThe updated array is \\n{print_pattern(arr)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The orignal array is \n",
+      "[[1 1 1 1 1]\n",
+      " [1 1 1 1 1]\n",
+      " [1 1 1 1 1]\n",
+      " [1 1 1 1 1]\n",
+      " [1 1 1 1 1]]\n",
+      "\n",
+      "The updated array is \n",
+      "[[1 1 1 1 1]\n",
+      " [1 0 0 0 1]\n",
+      " [1 0 0 0 1]\n",
+      " [1 0 0 0 1]\n",
+      " [1 1 1 1 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
