[Ayush] Add: Python program to add a border (filled with 0's) around an existing array.

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -295,6 +295,76 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q6\n",
+    "Python program to add a border (filled with 0's) around an existing array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_border(arr):\n",
+    "    \"\"\"\n",
+    "    Description: \n",
+    "        This function used to add border(0's) to an existing array\n",
+    "    Parameters:\n",
+    "        arr: array to be updated\n",
+    "    Return:\n",
+    "        arr\n",
+    "    \"\"\"\n",
+    "    rows, cols = arr.shape\n",
+    "    bordered_array = np.zeros((rows + 2, cols + 2))\n",
+    "    bordered_array[1:-1, 1:-1] = arr\n",
+    "    return bordered_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    arr = np.array([1 for _ in range(9)])\n",
+    "    arr = arr.reshape(3,3)\n",
+    "    print(f\"The orignal array is \\n{arr}\")\n",
+    "    print(f\"\\nThe updated array is \\n{add_border(arr)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The orignal array is \n",
+      "[[1 1 1]\n",
+      " [1 1 1]\n",
+      " [1 1 1]]\n",
+      "\n",
+      "The updated array is \n",
+      "[[0. 0. 0. 0. 0.]\n",
+      " [0. 1. 1. 1. 0.]\n",
+      " [0. 1. 1. 1. 0.]\n",
+      " [0. 1. 1. 1. 0.]\n",
+      " [0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
