[Ayush] Add: Python program to convert a list and tuple into arrays.

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -410,6 +410,48 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q8\n",
+    "Python program to convert a list and tuple into arrays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    num_list = [1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "    num_tuple = (1, 2, 3, 4, 5, 6, 7, 8)\n",
+    "    lst_to_arr = np.array(num_list)\n",
+    "    lst_to_tuple = np.array(num_tuple).reshape(2,4)\n",
+    "    print(f\"The converted array from list is {lst_to_arr} and from tupple is, \\n{lst_to_tuple}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The converted array from list is [1 2 3 4 5 6 7 8] and from tupple is, \n",
+      "[[1 2 3 4]\n",
+      " [5 6 7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
