[Ayush] Add: Python program to append values to the end of an array.

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -452,6 +452,49 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q9\n",
+    "Python program to append values to the end of an array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    n = int(input(\"Enter number of elements in the orignal array\"))\n",
+    "    arr = np.array([(int(input(f\"Enter {i+1} element: \"))) for i in range(n)])\n",
+    "    print(f\"The orignal array is {arr}\")\n",
+    "    n = int(input(\"\\nEnter number of elements to append: \"))\n",
+    "    values_to_append = [(int(input(f\"Enter {i+1} element: \"))) for i in range(n)]\n",
+    "    arr = np.append(arr, values_to_append)\n",
+    "    print(f\"The updated array is {arr}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The orignal array is [1 2 3 4]\n",
+      "The updated array is [ 1  2  3  4 78 21]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
