[Ayush] Add: Python program to find the real and imaginary parts of an array of complex numbers.

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -495,6 +495,45 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q10\n",
+    "Python program to find the real and imaginary parts of an array of complex numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    complex_nums = np.array([1 + 2j, 3 + 1j])\n",
+    "    print(f\"The array {complex_nums} is of type {complex_nums.dtype}\")\n",
+    "    print(f\"The real part is {complex_nums.real} and imaginary part is {complex_nums.imag}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The array [1.+2.j 3.+1.j] is of type complex128\n",
+      "The real part is [1. 3.] and imaginary part is [2. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
