[Ayush] Add: Python program to find the number of elements of an array, length of one array element in bytes and total bytes consumed by the elements.

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -534,6 +534,51 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q11\n",
+    "Python program to find the number of elements of an array, length of one array element in bytes and total bytes consumed by the elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    arr = np.array([[1, 2, 3], [1, 2, 3]], dtype = 'int32')\n",
+    "    size_of_array = arr.size\n",
+    "    size_of_element = arr.itemsize\n",
+    "    \n",
+    "    total_bytes = size_of_array * size_of_element\n",
+    "    print(f\"Size of the array: {size_of_array}\")\n",
+    "    print(f\"Length of one array element in bytes: {size_of_element}\")\n",
+    "    print(f\"Total bytes consumed by the elements of the array: {total_bytes}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of the array: 6\n",
+      "Length of one array element in bytes: 4\n",
+      "Total bytes consumed by the elements of the array: 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
