[Ayush] Add: Python program to find common values between two arrays.

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -579,6 +579,76 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q12\n",
+    "Python program to find common values between two arrays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def common_element_array(arr1, arr2):\n",
+    "    \"\"\"\n",
+    "    Description: \n",
+    "        This function used find common elements in two arrays\n",
+    "    Parameters:\n",
+    "        arr1, arr2: \n",
+    "    Return:\n",
+    "        list: common element list\n",
+    "    \"\"\"\n",
+    "    common_element = []\n",
+    "    for element in arr1:\n",
+    "        if element in arr2:\n",
+    "            common_element.append(element)\n",
+    " \n",
+    "    return common_element"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    n = int(input(\"Enter number of elements in the first array: \"))\n",
+    "    arr1 = np.array([(int(input(f\"Enter {i+1} element: \"))) for i in range(n)])\n",
+    "    print(f\"The first array is {arr1}\")\n",
+    "    \n",
+    "    n = int(input(\"\\nEnter number of elements in the second array: \"))\n",
+    "    arr2 = [(int(input(f\"Enter {i+1} element: \"))) for i in range(n)]\n",
+    "    print(f\"The second array is {arr2}\")\n",
+    "    lst = common_element_array(arr1, arr2)\n",
+    "    print(f\"\\nThe common elements are {common_element_array(arr1, arr2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first array is [1 2 3 4 5]\n",
+      "The second array is [1, 2, 7]\n",
+      "\n",
+      "The common elements are [1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
