[Ayush] Add: Python program to find the set difference of two arrays.

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -649,6 +649,76 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q13\n",
+    "Python program to find the set difference of two arrays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_difference_array(arr1, arr2):\n",
+    "    \"\"\"\n",
+    "    Description: \n",
+    "        This function used find set difference\n",
+    "    Parameters:\n",
+    "        arr1, arr2: \n",
+    "    Return:\n",
+    "        list: set difference\n",
+    "    \"\"\"\n",
+    "    set_diff = []\n",
+    "    for element in arr1:\n",
+    "        if element not in arr2:\n",
+    "            set_diff.append(element)\n",
+    " \n",
+    "    return set_diff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    n = int(input(\"Enter number of elements in the first array: \"))\n",
+    "    arr1 = np.array([(int(input(f\"Enter {i+1} element: \"))) for i in range(n)])\n",
+    "    print(f\"The first array is {arr1}\")\n",
+    "    \n",
+    "    n = int(input(\"\\nEnter number of elements in the second array: \"))\n",
+    "    arr2 = [(int(input(f\"Enter {i+1} element: \"))) for i in range(n)]\n",
+    "    print(f\"The second array is {arr2}\")\n",
+    "    lst = common_element_array(arr1, arr2)\n",
+    "    print(f\"\\nThe set difference is: {set_difference_array(arr1, arr2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first array is [ 0 10 20 40 60 80]\n",
+      "The second array is [10, 30, 40, 50, 70, 90]\n",
+      "\n",
+      "The set difference is: [0, 20, 60, 80]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
