[Ayush] Add: Python program to find the set exclusive-or of two arrays.

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -719,6 +719,53 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q14\n",
+    "Python program to find the set exclusive-or of two arrays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    n = int(input(\"Enter number of elements in the first array: \"))\n",
+    "    arr1 = np.array([(int(input(f\"Enter {i+1} element: \"))) for i in range(n)])\n",
+    "    print(f\"The first array is {arr1}\")\n",
+    "    \n",
+    "    n = int(input(\"\\nEnter number of elements in the second array: \"))\n",
+    "    arr2 = np.array([(int(input(f\"Enter {i+1} element: \"))) for i in range(n)])\n",
+    "    print(f\"The second array is {arr2}\")\n",
+    "\n",
+    "    print(f\"\\nThe set exclusive-or of two arrays is {np.setxor1d(arr1, arr2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first array is [ 0 10 20 40 60 80]\n",
+      "The second array is [10 20 30 50 50 70]\n",
+      "\n",
+      "The set exclusive-or of two arrays is [ 0 30 40 50 60 70 80]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
