[Ayush] Add: Python program to save a NumPy array to a text file.

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -819,6 +819,49 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q16\n",
+    "Python program to save a NumPy array to a text file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    n = int(input(\"Enter number of elements in the array: \"))\n",
+    "    arr = np.array([(int(input(f\"Enter {i+1} element: \"))) for i in range(n)])\n",
+    "    print(f\"The array is {arr}\")\n",
+    "    print(\"Saving array in a text file.....\")\n",
+    "    np.savetxt(\"my_array.txt\", arr)\n",
+    "    print(\"Save Sucessful\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The array is [1 2 3 4 5]\n",
+      "Saving array in a text file.....\n",
+      "Save Sucessful\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
