--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -862,6 +862,51 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q17\n",
+    "Python program to create a contiguous flattened array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    arr = np.array([[1, 5, 6, 7], [8, 9, 12,18]]) \n",
+    "    print(\"Original array:\\n\", arr) \n",
+    "    \n",
+    "    flattened_array = np.ravel(arr) \n",
+    "    print(\"\\nNew flattened array:\\n\", flattened_array) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array:\n",
+      " [[ 1  5  6  7]\n",
+      " [ 8  9 12 18]]\n",
+      "\n",
+      "New flattened array:\n",
+      " [ 1  5  6  7  8  9 12 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
