[Ayush] Add: Python program to change the data type of an array.

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -907,6 +907,54 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q18\n",
+    "Python program to change the data type of an array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    n = int(input(\"Enter number of elements in the array: \"))\n",
+    "    arr = np.array([(float(input(f\"Enter {i+1} element: \"))) for i in range(n)])\n",
+    "    print(f\"The array is {arr}\")\n",
+    "    print(f\"\\nThe orignal datatype of array is {arr.dtype}\")\n",
+    "    \n",
+    "    new_arr = arr.astype(int)\n",
+    "    print(f\"\\nThe converted array is {new_arr}\")\n",
+    "    print(f\"The coverted datatype of array is {new_arr.dtype}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The array is [1.23 2.43 0.9  9.24]\n",
+      "\n",
+      "The orignal datatype of array is float64\n",
+      "\n",
+      "The converted array is [1 2 0 9]\n",
+      "The coverted datatype of array is int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
