[Ayush] Add: Python program to create an array which looks like below array.

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -988,6 +988,49 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q20\n",
+    "Python program to create an array which looks like below array.<br>\n",
+    "Expected Output:<br>\n",
+    "[[ 0. 0. 0.]<br>\n",
+    "[ 1. 0. 0.]<br>\n",
+    "[ 1. 1. 0.]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 1. 0.]\n",
+      " [1. 1. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    arr = np.zeros((4,3))\n",
+    "\n",
+    "    for row in range(len(arr)):\n",
+    "        for column in range(row):\n",
+    "            arr[row, column] = 1\n",
+    "\n",
+    "    print(arr)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
