--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -1031,6 +1031,60 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q21\n",
+    "Python program to concatenate two 2-dimensional arrays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def concatenate_arrays(arr1, arr2):\n",
+    "  \"\"\"\n",
+    "  Desciption:\n",
+    "    Concatenates two 2D arrays horizontally.\n",
+    "  Parameter:\n",
+    "    arr1: The first 2D array.\n",
+    "    arr2: The second 2D array.\n",
+    "  Returns:\n",
+    "    The concatenated 2D array.\n",
+    "  \"\"\"\n",
+    "  return np.concatenate((arr1, arr2), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  3  0  2  4]\n",
+      " [ 5  7  9  6  8 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    arr1 = [[0, 1, 3], [5, 7, 9]]\n",
+    "    arr2 = [[0, 2, 4], [6, 8, 10]]\n",
+    "    \n",
+    "    result = concatenate_arrays(arr1, arr2)\n",
+    "    print(result)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
