[Ayush] Add: Python program to create an array of (3, 4) shape, multiply every element value by 3 and display the new array.

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -1130,6 +1130,51 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q23\n",
+    "Python program to create an array of (3, 4) shape, multiply every element value by 3 and display the new array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The orignal array is:\n",
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n",
+      "\n",
+      "The multiplied array is:\n",
+      "[[ 0  3  6  9]\n",
+      " [12 15 18 21]\n",
+      " [24 27 30 33]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    # arr = np.ones((3,4))\n",
+    "    arr = np.array([[0, 1, 2, 3],\n",
+    "            [4, 5, 6, 7],\n",
+    "            [8, 9, 10, 11]])\n",
+    "    print(f\"The orignal array is:\\n{arr}\")\n",
+    "    n = int(input(\"\\nEnter the number to be multiplied by array: \"))\n",
+    "    arr = arr * n\n",
+    "    print(f\"\\nThe multiplied array is:\\n{arr}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
