[Ayush] Add: Python program to convert a NumPy array into Python list structure.

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -1175,6 +1175,47 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q24\n",
+    "Python program to convert a NumPy array into Python list structure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The array is \n",
+      "[[0 1]\n",
+      " [2 3]\n",
+      " [4 5]]\n",
+      "\n",
+      "The numpy array converted into list is [[0, 1], [2, 3], [4, 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    # n = int(input(\"Enter number of elements in the array: \"))\n",
+    "    # arr = np.array([(int(input(f\"Enter {i+1} element: \"))) for i in range(n)])\n",
+    "    arr = np.array([[0, 1],[2, 3], [4, 5]])\n",
+    "    print(f\"The array is \\n{arr}\")\n",
+    "\n",
+    "    print(f\"\\nThe numpy array converted into list is {arr.tolist()}\")\n",
+    "    # print(f\"\\nThe numpy array converted into list is: \\n{list(arr)}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
