--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -1216,6 +1216,45 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q25\n",
+    "Python program to print array values with precision 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The array is:\n",
+      "[0.26153123 0.52760141 0.5718299  0.5927067  0.7831874  0.69746349\n",
+      " 0.35399976 0.99469633 0.0694458  0.54711478]\n",
+      "\n",
+      "The array values with precision 3 is:\n",
+      "[0.262 0.528 0.572 0.593 0.783 0.697 0.354 0.995 0.069 0.547]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    arr = np.array([0.26153123, 0.52760141, 0.5718299, 0.5927067, 0.7831874, 0.69746349, 0.35399976, 0.99469633, 0.0694458, 0.54711478])\n",
+    "    print(f\"The array is:\\n{arr}\")\n",
+    "\n",
+    "    np.set_printoptions(precision=3)\n",
+    "    print(f\"\\nThe array values with precision 3 is:\\n{arr}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
