--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -1255,6 +1255,44 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q26\n",
+    "Python program to suppresses the use of scientific notation for small numbers in numpy array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The array is:\n",
+      "[1.60e-10 1.60e+00 1.20e+03 2.35e-01]\n",
+      "\n",
+      "The array values with precision 3 is:\n",
+      "[   0.       1.6   1200.       0.235]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    arr = np.array([1.60000000e-10, 1.60000000e+00, 1.20000000e+03, 2.35000000e-01])\n",
+    "    print(f\"The array is:\\n{arr}\")\n",
+    "\n",
+    "    np.set_printoptions(precision = 3, suppress = True)\n",
+    "    print(f\"\\nThe array values with precision 3 is:\\n{arr}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
