[Ayush] Add: Python program to how to add an extra column to an numpy array.

--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -1293,6 +1293,33 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q27\n",
+    "Python program to how to add an extra column to an numpy array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    arr = np.array([[10, 20, 30],\n",
+    "                    [40, 50, 60]])\n",
+    "    print(f\"The orignal array is:\\n{arr}\")\n",
+    "    extra_column_arr = np.array([[100],[200]])\n",
+    "    arr = np.append(arr, extra_column_arr, axis = 1)\n",
+    "    print(f\"\\nThe array with extra column is:\\n{arr}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
