--- a/Numpy_Programs/numpy_programs.ipynb
+++ b/Numpy_Programs/numpy_programs.ipynb
@@ -1304,9 +1304,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The orignal array is:\n",
+      "[[10 20 30]\n",
+      " [40 50 60]]\n",
+      "\n",
+      "The array with extra column is:\n",
+      "[[ 10  20  30 100]\n",
+      " [ 40  50  60 200]]\n"
+     ]
+    }
+   ],
    "source": [
     "def main():\n",
     "    arr = np.array([[10, 20, 30],\n",
@@ -1317,6 +1331,51 @@
     "    print(f\"\\nThe array with extra column is:\\n{arr}\")\n",
     "\n",
     "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q28\n",
+    "Python program to remove specific elements in a numpy array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    n = int(input(\"Enter number of elements in the array: \"))\n",
+    "    arr = np.array([(int(input(f\"Enter {i+1} element: \"))) for i in range(n)])\n",
+    "    print(f\"The orignal array is:\\n{arr}\")\n",
+    "    # Remove 1st, 4th and 5th element\n",
+    "    new_arr = np.delete(arr, [0, 3, 4])\n",
+    "    print(f\"\\nThe updated array is:\\n{new_arr}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The orignal array is:\n",
+      "[1 2 3 4 5]\n",
+      "\n",
+      "The updated array is:\n",
+      "[2 3]\n"
+     ]
+    }
+   ],
+   "source": [
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
