[Ayush] Add: Python program to convert a Panda module Series to Python list and it's type.

--- a/Pandas_Programs/pandas_programs.ipynb
+++ b/Pandas_Programs/pandas_programs.ipynb
@@ -10,7 +10,7 @@
     "@Author: Ayush Prajapati<br>\n",
     "@Date: 07-07-2024<br>\n",
     "@Last Modified by: Ayush Prajapati<br>\n",
-    "@Last Modified time: 07-07-2024<br>\n",
+    "@Last Modified time: 08-07-2024<br>\n",
     "@Title: Python Programs on Pandas Library\n",
     "<br>\n",
     "'''"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f55cf03e-c54b-42da-ab2b-8987581cbc65",
    "metadata": {},
    "outputs": [],
@@ -70,12 +70,54 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e20eb6c-887f-4dbe-8eeb-8ab200279dc1",
+   "cell_type": "markdown",
+   "id": "836c7aa5-cd5b-4388-91c4-a1b2277a93e0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Q2\n",
+    "Python program to convert a Panda module Series to Python list and it's type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "51f4743d-9d0c-4dae-a0c6-03b0b865c3bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The orignal dictionary is {1: 'C++', 2: 'Java', 3: 'Python', 4: 'Rust'}\n",
+      "The pandas series is \n",
+      "1       C++\n",
+      "2      Java\n",
+      "3    Python\n",
+      "4      Rust\n",
+      "dtype: object\n",
+      "\n",
+      "The list is: ['C++', 'Java', 'Python', 'Rust']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    languages_dict = {\n",
+    "        1: 'C++',\n",
+    "        2: 'Java',\n",
+    "        3: 'Python',\n",
+    "        4: 'Rust'\n",
+    "    }\n",
+    "    \n",
+    "    print(f\"The orignal dictionary is {languages_dict}\")\n",
+    "    languages_series = pd.Series(languages_dict)\n",
+    "    print(f\"The pandas series is \\n{languages_series}\")\n",
+    "    print(f\"\\nThe list is: {languages_series.tolist()}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
