[Ayush] Add: Python program to add, subtract, multiple and divide two Pandas Series.

--- a/Pandas_Programs/pandas_programs.ipynb
+++ b/Pandas_Programs/pandas_programs.ipynb
@@ -118,6 +118,105 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88ce66f0-3a5a-48e5-a8da-77abd892bd47",
+   "metadata": {},
+   "source": [
+    "## Q3\n",
+    "Python program to add, subtract, multiple and divide two Pandas Series."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bd6ffbdb-1e65-4c68-975d-5cfb01455512",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def series_operations(series_a, series_b):\n",
+    "    \"\"\"\n",
+    "    Description: \n",
+    "        This function used to perform arithmetic operations on pandas series\n",
+    "    Parameters:\n",
+    "        series_a, series_b: pandas series\n",
+    "    Return:\n",
+    "        float: add, sub, mul, div\n",
+    "    \"\"\"\n",
+    "    return series_a + series_b, series_a - series_b, series_a * series_b, series_a / series_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ffb86e08-429a-4763-b1e3-2041350a9025",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The arithemetic operation on series \n",
+      "0    1\n",
+      "1    2\n",
+      "2    3\n",
+      "3    4\n",
+      "4    5\n",
+      "dtype: int64 and \n",
+      "0     6\n",
+      "1     7\n",
+      "2     8\n",
+      "3     9\n",
+      "4    10\n",
+      "dtype: int64 is:\n",
+      " \n",
+      "Add:\n",
+      "0     7\n",
+      "1     9\n",
+      "2    11\n",
+      "3    13\n",
+      "4    15\n",
+      "dtype: int64\n",
+      "\n",
+      "Sub:\n",
+      "0   -5\n",
+      "1   -5\n",
+      "2   -5\n",
+      "3   -5\n",
+      "4   -5\n",
+      "dtype: int64\n",
+      "\n",
+      "Mul:\n",
+      "0     6\n",
+      "1    14\n",
+      "2    24\n",
+      "3    36\n",
+      "4    50\n",
+      "dtype: int64\n",
+      "\n",
+      "Div:\n",
+      "0    0.166667\n",
+      "1    0.285714\n",
+      "2    0.375000\n",
+      "3    0.444444\n",
+      "4    0.500000\n",
+      "dtype: float64 \n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    series_a = pd.Series([1, 2, 3, 4, 5]) \n",
+    "    series_b= pd.Series([6, 7, 8, 9, 10])\n",
+    "    add,sub,mul,div = series_operations(series_a, series_b)\n",
+    "    print(f\"The arithemetic operation on series \\n{series_a} and \\n{series_b} is:\\n\",\n",
+    "          f\"\\nAdd:\\n{add}\\n\\nSub:\\n{sub}\\n\\nMul:\\n{mul}\\n\\nDiv:\\n{div} \")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
