[Ayush] Add: Python program to get the powers of an array values element-wise.

--- a/Pandas_Programs/pandas_programs.ipynb
+++ b/Pandas_Programs/pandas_programs.ipynb
@@ -217,6 +217,95 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8e5bcdb-89ea-4872-8580-2410fa575228",
+   "metadata": {},
+   "source": [
+    "## Q4\n",
+    "Python program to get the powers of an array values element-wise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c27e6895-322f-4f68-b4e0-2e7a7c613ac5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter number of elements in the first array:  5\n",
+      "Enter 1 element:  1\n",
+      "Enter 2 element:  2\n",
+      "Enter 3 element:  3\n",
+      "Enter 4 element:  4\n",
+      "Enter 5 element:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The orignal series is \n",
+      "0    1\n",
+      "1    2\n",
+      "2    3\n",
+      "3    4\n",
+      "4    5\n",
+      "dtype: int64\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter 1 power:  2\n",
+      "Enter 2 power:  2\n",
+      "Enter 3 power:  2\n",
+      "Enter 4 power:  2\n",
+      "Enter 5 power:  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The power series is \n",
+      "0    2\n",
+      "1    2\n",
+      "2    2\n",
+      "3    2\n",
+      "4    2\n",
+      "dtype: int64\n",
+      "\n",
+      "The array raised to another array is: [ 1  4  9 16 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    n = int(input(\"Enter number of elements in the first array: \"))\n",
+    "    arr = np.array([(int(input(f\"Enter {i+1} element: \"))) for i in range(n)])\n",
+    "    num_series = pd.Series(arr)\n",
+    "    print(f\"\\nThe orignal series is \\n{num_series}\\n\")\n",
+    "    \n",
+    "    arr = np.array([(int(input(f\"Enter {i+1} power: \"))) for i in range(n)])\n",
+    "    power_series = pd.Series(arr)\n",
+    "    print(f\"\\nThe power series is \\n{power_series}\")\n",
+    "\n",
+    "    power_arr = np.array([(num_series[index] ** power_series[index]) for index in range(len(num_series))])\n",
+    "    print(f\"\\nThe array raised to another array is: {power_arr}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
